# octotiger

./: CMakeLists.txt  build_octotiger.sh
.jenkins/lsu/: entry.sh
frontend/: frontend-helper.cpp  frontend-helper.hpp  init_methods.cpp  main.cpp
octotiger/: defs.hpp  eos.hpp  grid.hpp  helmholtz.hpp  hydro_defs.hpp  interaction_types.hpp  kokkos_util.hpp  node_server.hpp  options.hpp  profiler.hpp  roe.hpp  simd.hpp  space_vector.hpp  taylor.hpp  util.hpp
octotiger/common_kernel/: kernel_simd_types.hpp  kernel_taylor_set_basis.hpp  kokkos_util.hpp  multiindex.hpp  std_simd.hpp  struct_of_array_data.hpp
octotiger/cuda_util/: cuda_scheduler.hpp
octotiger/monopole_interactions/: cuda_p2p_interaction_interface.hpp
octotiger/multipole_interactions/: cuda_multipole_interaction_interface.hpp
octotiger/radiation/: cpu_kernel.hpp  kernel_interface.hpp  opacities.hpp  rad_grid.hpp
octotiger/stellar_eos/: helmholtz_eos.hpp  ideal_eos.hpp  segretain_eos.hpp  stellar_eos.hpp
octotiger/unitiger/: cell_geometry.hpp  hydro.hpp  physics.hpp  physics_impl.hpp  unitiger.hpp  util.hpp
octotiger/unitiger/hydro_impl/: boundaries.hpp  flux.hpp  flux_kernel_interface.hpp  hydro.hpp  reconstruct.hpp
octotiger/unitiger/radiation/: radiation_physics.hpp  radiation_physics_impl.hpp
octotiger/util/: vec_base_wrapper.hpp  vec_scalar_host_wrapper.hpp
src/: eos.cpp  grid.cpp  grid_amr.cpp  grid_fmm.cpp  grid_scf.cpp  helmholtz.cpp  node_client.cpp  node_server.cpp  node_server_actions_1.cpp  node_server_actions_2.cpp  node_server_actions_3.cpp  options.cpp  options_processing.cpp  physcon.cpp  problem.cpp  profiler.cpp  roe.cpp
src/cuda_util/: cuda_scheduler.cpp
src/io/: silo_in.cpp  silo_out.cpp
src/monopole_interactions/: cuda_p2p_interaction_interface.cpp  monopole_kernel_interface.cpp  p2m_kernel.cpp  p2p_cpu_kernel.cpp  p2p_interaction_interface.cpp  p2p_kernel_interface.cpp
src/monopole_interactions/legacy/: p2m_interaction_interface.cpp
src/multipole_interactions/: cuda_multipole_interaction_interface.cpp  multipole_cpu_kernel.cpp  multipole_kernel_interface.cpp
src/multipole_interactions/legacy/: multipole_interaction_interface.cpp
src/radiation/: rad_grid.cpp
src/stellar_eos/: helmholtz.cpp  ideal.cpp  segretain.cpp  stellar_eos.cpp
src/test_problems/blast/: sedov.cpp  sedovf_c.cpp
src/test_problems/rotating_star/: rotating_star.cpp
src/test_problems/sod/: sod.cpp
src/unitiger/: main.cpp
src/unitiger/hydro_impl/: flux_cpu_kernel.cpp  flux_kernel_interface.cpp  hydro_cuda_interface.cpp  hydro_kernel_interface.cpp  reconstruct_cpu_kernel.cpp
test_problems/: flux_kokkos.cpp  flux_kokkos.hpp
test_problems/rotating_star/: rotating_star.ini
test_problems/sod/: sod.ini
tools/: CMakeLists.txt
tools/bfilter/: bfilter.cpp
tools/docker/base_image/: build-image.bat  prerequisites-clang.dockerfile  prerequisites-gcc-split.dockerfile  vscode-gcc8.dockerfile
tools/silo_convert/: plain_silo.cpp  silo_convert.cpp  silo_convert.hpp  split_silo.cpp
